# autoreason

./: .gitignore  CLAUDE.md  OVERVIEW.md  README.md  RESULTS.md  config_v2.yaml  pyproject.toml
examples/: README.md
experiments/v2/: make_comparison_charts.py  run_v2.py
paper/: autoreason.aux  autoreason.out  autoreason.tex  experiment_context.md  figures.aux  figures.tex  make_paper_charts.py  make_paper_charts_v2.py  make_paper_charts_v3.py  onepager.aux  onepager.out  onepager.tex  run_paper_autoreason.py  run_paper_continue.py
paper/autoreason_run/: incumbent_after_pass_02.md  incumbent_after_pass_09.md
paper/autoreason_run/pass_01/: result.json  strawman.md  version_a.md  version_ab.md  version_b.md
paper/autoreason_run/pass_02/: result.json  strawman.md  version_b.md
paper/autoreason_run/pass_03/: result.json  strawman.md  version_ab.md  version_b.md
paper/autoreason_run/pass_04/: result.json  strawman.md  version_b.md
paper/autoreason_run/pass_05/: result.json  strawman.md  version_ab.md  version_b.md
paper/autoreason_run/pass_06/: result.json  strawman.md  version_a.md  version_ab.md  version_b.md
paper/autoreason_run/pass_07/: result.json  (+3 more)
paper/autoreason_run_v2/: final_paper.md  history.json
src/autoreason/: __init__.py  __main__.py  aggregate.py  artifacts.py  cli.py  compare.py  config.py  default_prompts.yaml  interactive.py  llm.py  loop.py  pass_.py  prompts.py  resume.py  signals.py  ui.py
tests/: test_aggregate.py  test_artifacts.py  test_cli_smoke.py  test_config.py  test_llm_budget.py  test_prompts.py  test_signals.py
(+21 files in other folders)
